versioned_docs/version-2.1/reusables/error-type.mdx
import ErrorExampleOce011 from '@site/versioned_docs/version-2.1/reusables/error-example-oce011.mdx'

```typescript title="Error Type"
{
    name: string,
    message: string,
    code: number,
    className: string,
    data: {
        errorCode?: string,
        additionalInputs?: string[], // only for error code OCE011
        inputAttemptsExceeded?: string[], // only for error code OCE019
        identifiers?: {
            [identifierKey: string]: string
        },
        verificationMethod?: {
            [identifierKey: string]: string
        },
        riskSignals?: RiskSignals // only for error codes OCE011, OCE012, OCE013, OCE017, and OCE019
        attemptsRemaining?: integer, // only for OCV error codes
        expiresAt?: integer // only for OCV error codes
    }
}
```

<table>
    <tr>
        <th>Property</th>
        <th>Type</th>
        <th>Format</th>
        <th>Description</th>
        <th>Example</th>
    </tr>
    <tr>
        <td>`name`</td>
        <td>`string`</td>
        <td>`PascalCase`</td>
        <td>Name of the error</td>
        <td>`"BadRequest"`</td>
    </tr>
    <tr>
        <td>`message`</td>
        <td>`string`</td>
        <td>`Sentence case`</td>
        <td>Message for developer that explains the error</td>
        <td>`"Additional information is required to source data for user: birthDate"`</td>
    </tr>
    <tr>
        <td>`code`</td>
        <td>`number`</td>
        <td>3 digits (0-9)</td>
        <td>[HTTP response status code](https://httpwg.org/specs/rfc9110.html#overview.of.status.codes)</td>
        <td>`400`</td>
    </tr>
    <tr>
        <td>`className`</td>
        <td>`string`</td>
        <td>`kebab-case`</td>
        <td>Class of error</td>
        <td>`bad-request`</td>
    </tr>
    <tr>
        <td>`data.errorCode`</td>
        <td>
            <details>
                <summary>`enum`</summary>

                See [Error Codes](/reference/api/errors#verified-error-codes) for possible values
            </details>
        </td>
        <td>3 letters and 3 digits (0-9)</td>
        <td>[Verified error code](/reference/api/errors#verified-error-codes)</td>
        <td>`"OCE011"`</td>
    </tr>
    <tr>
        <td>`data.additionalInputs`</td>
        <td>`string[]`</td>
        <td>`camelCase`</td>
        <td>Additional inputs to source [credentials](/reference/data/outputs#credentials) for user, where multiple values indicates **inclusive OR** (only included for [`OCE011`](/reference/api/errors#oce011))</td>
        <td>`["birthDate", "ssn4"]`</td>
    </tr>
    <tr>
        <td>`data.inputAttemptsExceeded`</td>
        <td>`string[]`</td>
        <td>`camelCase`</td>
        <td>Input(s) for which the attempts limit (3 for each input) has been exceeded (only included for [`OCE019`](/reference/api/errors#oce019))</td>
        <td>`["birthDate", "ssn4"]`</td>
    </tr>
    <tr>
        <td>`data.identifiers`</td>
        <td>`object`</td>
        <td>`camelCase`</td>
        <td>[Identifiers](/reference/data/inputs#identifiers) includede in the request</td>
        <td>`["birthDate", "ssn4"]`</td>
    </tr>
    <tr>
        <td>`data.verificationMethod`</td>
        <td>`object`</td>
        <td>`camelCase`</td>
        <td>[Verification method](/reference/data/outputs#verification-method) for [identifiers](/reference/data/inputs#identifiers) includede in the request</td>
        <td>`["birthDate", "ssn4"]`</td>
    </tr>
    <tr>
        <td>`identifierKey`</td>
        <td>
            <details>
                <summary>`enum`</summary>

                Possible values (see [identifiers](/reference/data/inputs#identifiers) for details):
                    - `phone`
                    - `email`
            </details>
        </td>
        <td>`camelCase`</td>
        <td>The type of identifier</td>
        <td>`"phone"`</td>
    </tr>
    <tr>
        <td>`data.riskSignals`</td>
        <td>[`RiskSignals`](/reference/api/types#risksignals)</td>
        <td>`object`</td>
        <td>[Verified risk signals](/reference/data/outputs#risk-signals) associated with the 1-Click Signup event (only included for [`OCE011`](/reference/api/errors#oce011), [`OCE012`](/reference/api/errors#oce012), [`OCE013`](/reference/api/errors#oce013), [`OCE017`](/reference/api/errors#oce017), and [`OCE019`](/reference/api/errors#oce019))</td>
        <td>See [`RiskSignals` example](/reference/api/types#example-risksignals)</td>
    </tr>
    <tr>
        <td>`data.atteptsRemaining`</td>
        <td>`integer`</td>
        <td>Any number of digits (0-9)</td>
        <td>How many verification attempts the user has remaining</td>
        <td>`3`</td>
    </tr>
    <tr>
        <td>`data.expiresAt`</td>
        <td>`integer`</td>
        <td>[Unix time](https://en.wikipedia.org/wiki/Unix_time) (milliseconds)</td>
        <td>When the verification expires (meaning it can no longer succeed)</td>
        <td>`1760053995000`</td>
    </tr>
</table>